crates/djls-project/tests/snapshots/corpus__repos__geonode__geonode__layers__templatetags__contact_roles.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "geonode.layers.templatetags.contact_roles::tag::getattribute":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: form
          requirement: required
          kind: Variable
        - name: contact
          requirement: required
          kind: Variable
    as_var: strip
filter_arities:
  "geonode.layers.templatetags.contact_roles::filter::get_contact_role_id": required_argument
  "geonode.layers.templatetags.contact_roles::filter::get_contact_role_label": required_argument
  "geonode.layers.templatetags.contact_roles::filter::get_contact_role_value": required_argument
block_specs: {}
