crates/djls-project/tests/snapshots/corpus__repos__geonode__geonode__layers__templatetags__dataset_tags.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "geonode.layers.templatetags.dataset_tags::tag::get_all_resource_styles":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: resource
          requirement: required
          kind: Variable
    as_var: strip
  "geonode.layers.templatetags.dataset_tags::tag::get_sld_name_from_url":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: sld_url
          requirement: required
          kind: Variable
    as_var: strip
  "geonode.layers.templatetags.dataset_tags::tag::get_style_name_from_legend_url":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: legend_url
          requirement: required
          kind: Variable
    as_var: strip
filter_arities:
  "geonode.layers.templatetags.dataset_tags::filter::camelize": no_argument
  "geonode.layers.templatetags.dataset_tags::filter::crs_labels": no_argument
  "geonode.layers.templatetags.dataset_tags::filter::lower": no_argument
block_specs: {}
